Library/AXL(Library)/Visual Basic(Net)/AXDev.vb


' Set home setting parameters of axis specified by user. (Use exclusive-use register for QI chip).
' uZphasCount : Z phase count after home completion. (0 - 15)
' lHomeMode   : Home setting mode( 0 - 12)
' lClearSet   : Select use of position clear and remaining pulse clear (0 - 3)
'               0: No use of position clear, no use of remaining pulse clear
'               1: use of position clear, no use of remaining pulse clear
'               2: No use of position clear, use of remaining pulse clear
'               3: use of position clear, use of remaining pulse clear
' dOrgVel : Set Org  Speed related home
' dLastVel: Set Last Speed related home
Public Declare Function AxmHomeSetConfig Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uZphasCount As Integer, ByVal lHomeMode As Integer, ByVal lClearSet As Integer, ByVal dOrgVel As Double, ByVal dLastVel As Double, ByVal dLeavePos As Double) As Integer
' Return home setting parameters of axis specified by user.
Public Declare Function AxmHomeGetConfig Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upZphasCount As Integer, ByRef lpHomeMode As Integer, ByRef lpClearSet As Integer, ByRef dpOrgVel As Double, ByRef dpLastVel As Double, ByRef dpLeavePos As Double) As Integer


' Start home search of axis specified by user
' Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveSearch Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' Start home return of axis specified by user.
' Set when lHomeMode is used: set 0 - 12
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveReturn Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' Home separation of axis specified by user is started.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMoveLeave Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dVel As Double, ByVal dAccel As Double, ByVal dDecel As Double) As Integer


' User start home search of multi-axis specified by user.
' Set when use lHomeMode : Set 0 - 5 (Start search after Move Return.)
' If lHomeMode -1is used as it is, the setting is done as used in HomeConfig.
' Move direction      : CW when Vel value is positive, CCW when negative.
Public Declare Function AxmHomeSetMultiMoveSearch Lib "AXL.dll" (ByVal lArraySize As Integer, ByRef lpAxesNo As Integer, ByRef dpVel As Double, ByRef dpAccel As Double, ByRef dpDecel As Double) As Integer


'Set move velocity profile mode of specific coordinate system.
' (caution : Available to use only after axis mapping)
'ProfileMode : '0' - symmetry Trapezoid
'              '1' - asymmetric Trapezoid
'              '2' - symmetry Quasi-S Curve
'              '3' - symmetry S Curve
'              '4' - asymmetric S Curve
Public Declare Function AxmContiSetProfileMode Lib "AXL.dll" (ByVal lCoord As Integer, ByVal uProfileMode As Integer) As Integer
' Return move velocity profile mode of specific coordinate system.
Public Declare Function AxmContiGetProfileMode Lib "AXL.dll" (ByVal lCoord As Integer, ByRef upProfileMode As Integer) As Integer


'========== Reading group for input interrupt occurrence flag
' Reading the interrupt occurrence state by bit unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadBit Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
' Reading the interrupt occurrence state by byte unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadByte Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
' Reading the interrupt occurrence state by word unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadWord Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
' Reading the interrupt occurrence state by double word unit in specified input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagReadDword Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal lOffset As Integer, ByRef upValue As Integer) As Integer
' Reading the interrupt occurrence state by bit unit in entire input contact module and Offset position of Interrupt Flag Register
Public Declare Function AxdiInterruptFlagRead Lib "AXL.dll" (ByVal lOffset As Integer, ByRef upValue As Integer) As Integer


'========= API related log ==========================================================================================
' This API sets or resets in order to monitor the API execution result of set axis in EzSpy.
' uUse : use or not use => DISABLE(0), ENABLE(1)
Public Declare Function AxmLogSetAxis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal uUse As Integer) As Integer


' This API verifies if the API execution result of set axis is monitored in EzSpy.
Public Declare Function AxmLogGetAxis Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef upUse As Integer) As Integer


'==Log
' Set whether to log output to EzSpy of specified input channel
Public Declare Function AxaiLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uUse As Integer) As Integer
' Verify whether to log output to EzSpy of specified input channel
Public Declare Function AxaiLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUse As Integer) As Integer


' Set whether to log output in EzSpy of specified output channel
Public Declare Function AxaoLogSetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByVal uUse As Integer) As Integer
' Verify whether log output is done in EzSpy of specified output channel.
Public Declare Function AxaoLogGetChannel Lib "AXL.dll" (ByVal lChannelNo As Integer, ByRef upUse As Integer) As Integer


' Set whether execute log output on EzSpy of specified module
Public Declare Function AxdLogSetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByVal uUse As Integer) As Integer
' Verify whether execute log output on EzSpy of specified module
Public Declare Function AxdLogGetModule Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef upUse As Integer) As Integer


' Verify whether to firmware version designated RTEX board.
Public Declare Function AxlGetFirmwareVersion Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal szVersion As String) As Integer
' Sent to firmware designated board.
Public Declare Function AxlSetFirmwareCopy Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef wData As Integer, ByRef wCmdData As Integer) As Integer
' Execute Firmware update to designated board.
Public Declare Function AxlSetFirmwareUpdate Lib "AXL.dll" (ByVal lBoardNo As Integer) As Integer
' Verify whether currently RTEX status Initialized.
Public Declare Function AxlCheckStatus Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwStatus As Integer) As Integer
' Execute universal command designated axis of board.
Public Declare Function AxlRtexUniversalCmd Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wCmd As Integer, ByVal wOffset As Integer, ByRef wData As Integer) As Integer
' Execute RTEX communication command designated axis.
Public Declare Function AxmRtexSlaveCmd Lib "AXL.dll" (ByVal lAxisNo As Integer, ByVal dwCmdCode As Integer, ByVal dwTypeCode As Integer, ByVal dwIndexCode As Integer, ByVal dwCmdConfigure As Integer, ByVal dwValue As Integer) As Integer
' Verify whether Result of RTEX communication command designated axis.
Public Declare Function AxmRtexGetSlaveCmdResult Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwIndex As Integer, ByRef dwValue As Integer) As Integer
' Check the result of the RTEX communication command executed on the specified axis. PCIE-Rxx04-RTEX only
Public Declare Function AxmRtexGetSlaveCmdResultEx Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwpCommand As Integer, ByRef dwpType As Integer, ByRef dwpIndex As Integer, ByRef dwpValue As Integer) As Integer
' Verify whether RTEX status information designated axis.
Public Declare Function AxmRtexGetAxisStatus Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwStatus As Integer) As Integer
' Verify whether RTEX communication return information designated axis.(Actual position, Velocity, Torque)
Public Declare Function AxmRtexGetAxisReturnData Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwReturn1 As Integer, ByRef dwReturn2 As Integer, ByRef dwReturn3 As Integer) As Integer
' Verify whether currently status information of RTEX slave axis.(mechanical, Inposition and etc)
Public Declare Function AxmRtexGetAxisSlaveStatus Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef dwStatus As Integer) As Integer


' Enter the universal network command of specified MLII slave axis.
Public Declare Function AxmSetAxisCmd Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef tagCommand As Integer) As Integer
' Verifying result of universal network command of specified MLII slave axis.
Public Declare Function AxmGetAxisCmdResult Lib "AXL.dll" (ByVal lAxisNo As Integer, ByRef tagCommand As Integer) As Integer


' The specified SID Write the result of the network command to the slave module and return it.
Public Declare Function AxdSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef tagSetCommand As Integer, ByRef tagGetCommand As Integer) As Integer
Public Declare Function AxaSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef tagSetCommand As Integer, ByRef tagGetCommand As Integer) As Integer
Public Declare Function AxcSetAndGetSlaveCmdResult Lib "AXL.dll" (ByVal lModuleNo As Integer, ByRef tagSetCommand As Integer, ByRef tagGetCommand As Integer) As Integer

' Verify DPRAM data
Public Declare Function AxlGetDpRamData Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wAddress As Integer, ByRef dwpRdData As Integer) As Integer
' Verify DPRAM data in Word unit.
Public Declare Function AxlBoardReadDpramWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByRef dwpRdData As Integer) As Integer
' Set DPRAM data in Word unit.
Public Declare Function AxlBoardWriteDpramWord Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal wOffset As Integer, ByVal dwWrData As Integer) As Integer

' Transmit instructions of each slave of each board.
Public Declare Function AxlSetSendBoardEachCommand Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwCommand As Integer, ByRef dwpSendData As Integer, ByVal dwLength As Integer) As Integer
' Transmit instructions to each board.
Public Declare Function AxlSetSendBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Integer, ByVal dwCommand As Integer, ByRef dwpSendData As Integer, ByVal dwLength As Integer) As Integer
' Verify the response of each board.
Public Declare Function AxlGetResponseBoardCommand Lib "AXL.dll" (ByVal lBoardNo As Integer, ByRef dwpReadData As Integer) As Integer
